--- a/calentamiento_peru.qmd
+++ b/calentamiento_peru.qmd
@@ -42,14 +42,14 @@ df_week
 # Heatmap
 
 # Plot base
-```{r fig.width=6, fig.height=5}
+```{r fig.width=6, fig.height=6}
 
 p <- ggplot(df_week, aes(x = year, y = week, fill = tavg_week)) +
     geom_tile(colour = "#2D2D2D") +  # Use geom_tile() instead of geom_raster() for better control
     scale_x_continuous(
         expand = c(0, 0),
         breaks = c(1990, 2000, 2010, 2020),
-        limits = c(1975, 2030),
+        limits = c(1975, 2035),
         position = "bottom"
         ) + 
     # scale_y_continuous(
@@ -58,7 +58,7 @@ p <- ggplot(df_week, aes(x = year, y = week, fill = tavg_week)) +
         expand = c(0, 0),
         breaks = c(52, 3),
         # labels = c("Última\nsemana\ndel año", "Primera\nsemana\ndel año"),
-        limits = c(54, -3)
+        limits = c(54, -5)
         ) +
     scale_fill_distiller(
         palette = "RdBu", 
@@ -68,12 +68,12 @@ p <- ggplot(df_week, aes(x = year, y = week, fill = tavg_week)) +
     labs(
         x = "Año",
         y = "Semana",
-        title = "El invierno de Lima 2023 fue de los más cálidos desde 'El Niño' 1997/98",
-        subtitle = "Temperaturas semanales promedio y Niños de intensidad fuerte"
+        title = "El invierno de Lima 2023 fue de los más\ncálidos desde el Fenómeno El Niño 1997/98",
+        subtitle = "Temperaturas semanales promedio y «niños» de intensidad fuerte"
     )  +
     labs(
         caption = "Elaboración: Gonzalo Talavera Forlin - desarro.io\nFuente: ncei.noaa.gov - Temperaturas diarias promedio en la estación del Aeropuerto Internacional Jorge Chávez.\nNo hay datos disponibles para los años 2013 ni 2014. Promedios semanales calculados a partir de las temperaturas diarias promedio",
-        fill = "Temp."
+        fill = ""
         ) +
         guides(fill = guide_colourbar(barwidth = unit(0.075, "inches"))) +
         theme_void() +  # Use theme_void() as the base theme
@@ -96,12 +96,15 @@ p <- ggplot(df_week, aes(x = year, y = week, fill = tavg_week)) +
         plot.title.position = "plot", 
         plot.subtitle = element_text(
             margin = margin(b = 10, unit = "pt"),
-            size = 6), 
+            size = 10), 
         legend.title = element_text(size = 6),
         legend.text = element_text(size = 6),
-        legend.position = "right",
+        legend.position = c(0.04, 0.15),
         legend.spacing.y = unit(15, "pt"),
         axis.text.y = element_blank(),
+        axis.text.x = element_text(
+            size = 7
+        ),
         plot.margin = margin(
             t = 10, r = 10, b = 10, l = 10, unit = "pt")
         ) 
@@ -111,7 +114,7 @@ print(p)
 
 ```
 
-```{r fig.width=6, fig.height=5}
+```{r fig.width=6, fig.height=6}
 heatmap <- p +
 # Missing data
     annotate(
@@ -123,7 +126,7 @@ heatmap <- p +
     annotate(
         "text", x = 1981, y = 3.5, 
         label = "Primera\nsemana\nde 1982", 
-        size = 2, color = "#F9F7F3", family = "Sanchez", vjust = 1, hjust = 1,
+        size = 3.5, color = "#F9F7F3", family = "Sanchez", vjust = 1, hjust = 1,
         ) +
     geom_curve(
         aes(x    = 1981,    y = 1, 
@@ -132,12 +135,6 @@ heatmap <- p +
         arrow = arrow(
             type = "closed", length = unit(0.05, "inches"))
         ) + 
-# # Fin de año
-#     annotate(
-#         "text", x = 1981, y = 53.5, 
-#         label = "Última semana", 
-#         size = 2, color = "#F9F7F3", family = "Sanchez", vjust = 0, hjust = 1,
-#         ) +
 # Última semana
     geom_curve(
         aes(x    = 2023.2,    y = 46,
@@ -151,48 +148,35 @@ heatmap <- p +
         x = 2025, y = 47,
         label = "Semana del\n05 al 09 de\nnoviembre\n2023",
         angle = 0, hjust = 0,
-        color = "#F9F7F3", size = 2, family = "Sanchez"
+        color = "#F9F7F3", size = 3.5, family = "Sanchez"
         ) +
 # FEN 83
     annotate(
         "text", 
-        x = 1982.5, y = 0, 
+        x = 1982.5, y = -0.5, 
         label = "Niño\n82/83", 
         angle = 0, vjust = 0, 
-        color = "#F9F7F3", size = 2, family = "Sanchez"
+        color = "#F9F7F3", size = 2.6, family = "Sanchez"
         ) +
 # FEN 98
     annotate(
         "text", 
-        x = 1997.5, y = 0, 
+        x = 1997.5, y = -0.5, 
         label = "Niño\n97/98", 
         angle = 0, vjust = 0, 
-        color = "#F9F7F3", size = 2, family = "Sanchez"
+        color = "#F9F7F3", size = 2.6, family = "Sanchez"
         ) +
 # FEN 23
     annotate(
         "text", 
-        x = 2023.5, y = 0, 
+        x = 2024.5, y = -0.5, 
         label = "¿Niño\n23/24?", 
         angle = 0, vjust = 0, 
-        color = "#F9F7F3", size = 2, family = "Sanchez"
-        ) + 
-# Invierno
-    annotate(
-        "rect",
-        xmin = 2023.96,
-        xmax = 2024, ymin = 25, ymax = 38, 
-        colour = "#F9F7F3"
-    ) + 
-    annotate(
-        "text", 
-        x = 2025.5, y = 31.5, 
-        label = "Invierno", 
-        angle = 90, vjust = 0, 
-        color = "#F9F7F3", size = 3, family = "Sanchez"
+        color = "#F9F7F3", size = 2.6, family = "Sanchez"
         ) 
 
-ggsave("outputs/heatmap.png")
+ggsave("outputs/heatmap.png") |> suppressMessages()
+ggsave("outputs/heatmap.svg") |> suppressMessages()
 
 print(heatmap)
 ```
